[tool.poetry]
name = "misc"
version = "0.1.0"
description = "Misc tools"
authors = ["Dmitry Pyzhov <lux.place@gmail.com>"]
readme = "README.md"
packages = [{include = "misc"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
selenium = "^4.8.0"
requests = "^2.28.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
